# lazyshorts-py

./: .gitignore  README.md  main.py  pipelinehandler.py  preprocess_handler.py  render_handler.py  render_manager.py  requirements.txt  setup.cfg  setup.py  transcriber.py  ui.py  working_directory_manager.py
app/: __main__.py  preprocess_handler.py  render_handler.py  render_manager.py  ui.py  working_directory_manager.py
