
[options]
packages = app
install_requires = file: requirements.txt

[options.entry_points]
console_scripts = 
    lazyshorts = app.__main__:main

[metadata]
name = lazyshorts-py
version = 0.1.0
author = Gergő Vári
author_email = work@varigergo.xyz
url = https://github.com/gergovari/lazyshorts-py
description = A command to convert long-form videos into multiple short-form videos, with burned-in text and subtitles.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3
